added github and google OAuth

--- a/.env
+++ b/.env
@@ -8,3 +8,9 @@ DATABASE_URL="mongodb+srv://AliSohani:8RgjX42BBq46cMXv@cluster0.k7e24zv.mongodb.
 
 NEXTAUTH_JWT_SECRET="NEXT-JWT-SECRET"
 NEXTAUTH_SECRET="NEXT-SECRET"
+
+GITHUB_ID = 1eb57fce4b36c08359f1
+GITHUB_SECRET = 9c0d9f9ccce230ef6ac082dd23a4991a4f4b6492
+
+GOOGLE_CLIENT_ID=933012834946-5ae6b57dkhkuoea1jgb45nrhlppo3her.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
