--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^5.1.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "lodash": "^4.17.21",
     "next": "13.3.0",
     "next-auth": "^4.22.0",
     "prisma": "^4.12.0",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/lodash": "^4.14.194",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1"
